# soy-cli

./: .gitignore  README.md  pyproject.toml
src/soy_cli/: __init__.py  logging.py  utils.py
src/soy_cli/common/: asset.py  models.py  reader.py  writer.py
src/soy_cli/common/strategies/: pandas.py  spark.py
src/soy_cli/config/: .env.dev  env.py
src/soy_cli/databricks/: session.py
src/soy_cli/monitoring/: tables.py
src/soy_cli/tasks/: io.yaml  main.py
src/soy_cli/trace/: measure.py
src/soy_cli/utils/: loaders.py  measure.py
tests/: conftest.py  test_logging.py
